# dyn_async_opencv

./: ANSWERS.md  README_AO.md
CV_wrapper/: CMakeLists.txt  CV_wrapper.pro
CV_wrapper/include/: CV_wrapper.h  cv_plugin.h
CV_wrapper/src/: CV_wrapper.cpp  cv_plugin.cpp  test.cpp
plugins/blur/: CMakeLists.txt  blur.pro
plugins/blur/include/: blur.h
plugins/blur/src/: blur.cpp
plugins/dilate/: CMakeLists.txt  builder.sh  dilate.pro
plugins/dilate/include/: dilate.h
plugins/dilate/src/: dilate.cpp
plugins/erode/: CMakeLists.txt  builder.sh  erode.pro
plugins/erode/include/: erode.h
plugins/erode/src/: erode.cpp
plugins/template_plugin/: CMakeLists.txt  builder.sh  generate_module.sh  name.pro
plugins/template_plugin/include/: name.h
plugins/template_plugin/src/: name.cpp
res/: blur.yml  dilate.yml  erode.yml
